--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
       </div>
       <!-- Display overall tap counts -->
       <div class="w-1/2 flex flex-col justify-center items-center">
-        <h3 class="text-xl">Overall Tap</h3>
+        <h3 class="text-xl">Overall Taps</h3>
         <span id="tapped-overall" class="text-3xl"><%= counter[0].tapped_overall %></span>
       </div>
     </section>
